--- a/AndroidActivity/app/src/main/res/layout/activity_sample_card_view.xml
+++ b/AndroidActivity/app/src/main/res/layout/activity_sample_card_view.xml
@@ -7,7 +7,7 @@
     tools:context=".SampleRecyclerView">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvLatihan"
+        android:id="@+id/rvCardView"
         android:layout_width="409dp"
         android:layout_height="729dp"
         android:layout_marginStart="1dp"
