--- a/AndroidActivity/app/src/main/res/menu/menu_mhs.xml
+++ b/AndroidActivity/app/src/main/res/menu/menu_mhs.xml
@@ -2,12 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/menu_add"
-        android:title="Add" />
-    <item
-        android:id="@+id/menu_edit"
-        android:title="Edit" />
-    <item
         android:id="@+id/delete_mhs"
+        android:icon="@drawable/ic_home_black_24dp"
         android:title="Delete" />
 </menu>
